Small amendments added PHPunit dependency and tests folder

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
             "ShinraCoder\\DataTableHandler\\": "lib/"
         }
     },
-    "require": {
-        "symfony/http-foundation": "^3.3"
+    "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "^6.2"
     }
 }
