--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,12 @@
     ],
     "autoload": {
         "psr-4": {
-            "ShinraCoder\\DataTableHandler\\": "lib/"
+            "ShinraCoder\\DataTableHandler\\": "src/"
         }
     },
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "^6.2"
+        "phpunit/phpunit": "^5.7",
+        "doctrine/orm": "*"
     }
 }
